--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   </div>
   <div class="navigation"">
   <p> there is nothing here yet... check back later</p>
+  <video width="1920" height="1080" controls>
+  <source src="intro [U3sVomobC6s].mp4" type="video/mp4">
+  </video> 
   </div>
   
 </body>
