--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="navigation"">
   <p> there is nothing here yet... check back later</p>
   <video width="960" height="540" controls>
-  <source src="intro [U3sVomobC6s].mp4" type="video/mp4">
+  <source src="Intro3.mp4" type="video/mp4">
   </video> 
   </div>
   
