--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <div class = "header">
   </div>
   <div class="navigation"">
-  <p> there is nothing here yet... check back later</p>
+  <p>Here is a trailer for The Last Architect</p>
+  <video width="960" height="540" controls>
+  <source src="The Last Architect Trailer.mp4" type="video/mp4">
+  </video> 
   </div>
   
 </body>
