--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
 <head>
-
-  <title> The Last Architect </title>
+<title>The Last Architect</title>
+	
+<link rel="stylesheet" href="style.css">
 </head>
-  
-<body class="background">
-  <div class = "header">
-  </div>
-  <div class="navigation"">
-  <p>Here is a trailer for The Last Architect</p>
-  <video width="960" height="540" controls>
-  <source src="The Last Architect Trailer.mp4" type="video/mp4">
-  </video> 
-  </div>
-  
+<body> 
+<div class="pagehead">
+	
+	<h1 class="title">The Last Architect</h>
+
+</div>
+ <div class="navigation">
+	<a href="" class="navscreen"><button class="homebutton">Home</button></a>
+	<a href=""><button class="navbutton">The Program</button></a>
+	<a href=""><button class="navbutton">History</button></a>
+	<a href=""><button class="navbutton">Graphics</button></a>
+	<a href=""><button class="navbutton">Archive</button></a>
+ </div>
+<div class="pagetitle">
+	
+	<h3 class="title">Documentary</h>
+
+</div>
+<div class="diagramdiv">
+	<img src="diagram.jpg" class="diagramimg">
+</div>
 </body>
-</html>
