--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 </div>
 <div class="diagramdiv">
-	<img src="diagram.jpg" class="diagramimg">
+	 <iframe width="420" height="315"src="https://www.youtube.com/watch?v=oh_0r_xmjMs">
+	</iframe> 
 </div>
 </body>
