--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <div class="pagehead">
 	
 	<h1 class="title">The Last Architect</h>
+	<h3>by Harry Miller</h3>
 
 </div>
  <div class="navigation">
-	<a href="" class="navscreen"><button class="homebutton">Home</button></a>
+	<a href="" class="navscreen"><button class="homebutton">Documentary</button></a>
 	<a href=""><button class="navbutton">The Program</button></a>
 	<a href=""><button class="navbutton">History</button></a>
 	<a href=""><button class="navbutton">Graphics</button></a>
