--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 
 </div>
 <div class="diagramdiv">
-	 <iframe width="420" height="315"src="https://www.youtube.com/watch?v=oh_0r_xmjMs">
-	</iframe> 
+	 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/oh_0r_xmjMs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 </body>
