--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body> 
 <div class="pagehead">
 	
-	<h1 class="title">The Last Architect</h>
+	<h1 class="title">The Last Architect</h1>
 	<h3>by Harry Miller</h3>
 
 </div>
@@ -24,6 +24,6 @@
 
 </div>
 <div class="diagramdiv">
-	 <iframe width=85% height=100% src="https://www.youtube-nocookie.com/embed/oh_0r_xmjMs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	 <iframe width=85% src="https://www.youtube-nocookie.com/embed/oh_0r_xmjMs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 </body>
