--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<h3 class="title">Documentary</h>
 
 </div>
-<div class="diagramdiv">
-	 <iframe width=85% src="https://www.youtube-nocookie.com/embed/oh_0r_xmjMs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="video">
+	 <iframe width=100% height=100% src="https://www.youtube-nocookie.com/embed/oh_0r_xmjMs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 </body>
