--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <div class="pagehead">
 	
 	<h1 class="title">The Last Architect</h1>
-	<br>
 	<h3>by Harry Miller</h3>
 
 </div>
@@ -19,12 +18,10 @@
 	<a href=""><button class="navbutton">Graphics</button></a>
 	<a href=""><button class="navbutton">Archive</button></a>
  </div>
-<div class="pagetitle">
-	
+<div class="contentdiv">
 	<h3 class="title">Documentary</h>
-
-</div>
 <div class="video">
 	 <iframe width=100% height=100% src="https://www.youtube-nocookie.com/embed/oh_0r_xmjMs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 </div>
 </body>
