--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<a href=""><button class="navbutton">Graphics</button></a>
 	<a href=""><button class="navbutton">Archive</button></a>
  </div>
-<div class="contentdiv">
+<div>
 	<h3 class="title">Documentary</h>
 <div class="video">
 	 <iframe width=100% height=100% src="https://www.youtube-nocookie.com/embed/oh_0r_xmjMs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
