--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	<a href=""><button class="navbutton">Graphics</button></a>
 	<a href=""><button class="navbutton">Archive</button></a>
  </div>
-<h3 class="title">Documentary</h>
-<iframe class = "vid" width=100% height=100% src="https://www.youtube-nocookie.com/embed/oh_0r_xmjMs" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</body>
+<div class="contentdiv">
+	<h3 class="title">Documentary</h>
+	<iframe class = "vid" width=100% height=100% src="https://www.youtube-nocookie.com/embed/oh_0r_xmjMs" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+	</body>
