--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<h3 class="title">Documentary</h>
 </div>
 <div class="vid">
-	<iframe src="https://www.youtube-nocookie.com/embed/oh_0r_xmjMs" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe height=100% width=100% src="https://www.youtube-nocookie.com/embed/oh_0r_xmjMs" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </div>
 </body>
