--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="contentdiv">
 	<h3 class="title">Documentary</h>
 </div>
-<div class="vid">
-	<iframe height=100% width=100% src="https://www.youtube-nocookie.com/embed/oh_0r_xmjMs" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="container">
+	<iframe  class="responsive-iframe" src="https://www.youtube-nocookie.com/embed/oh_0r_xmjMs" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 </body>
