--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	<h3 class="title">Documentary</h>
 	<div class="trial"></div>
 </div>
-<div class="container">
-	<iframe  class="responsive-iframe" src="https://www.youtube-nocookie.com/embed/oh_0r_xmjMs" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="videoWrapper">
+	<<iframe src="https://www.youtube-nocookie.com/embed/oh_0r_xmjMs" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 </body>
