--- a/history.html
+++ b/history.html
@@ -21,7 +21,9 @@
 <div class="
 <div class="
 <div class="contentdiv">
-  
+  <img src="1.jpg" class="historyimg">
+  <img src="2.jpg" class="historyimg">
+  <img src="3.jpg" class="historyimg">
 </div>
 
 </body>
