--- a/history.html
+++ b/history.html
@@ -22,6 +22,28 @@
   <img src="1.jpg" class="historyimg">
   <img src="2.jpg" class="historyimg">
   <img src="3.jpg" class="historyimg">
+  <img src="4.jpg" class="historyimg">
+  <img src="5.jpg" class="historyimg">
+  <img src="6.jpg" class="historyimg">
+  <img src="7.jpg" class="historyimg">
+  <img src="8.jpg" class="historyimg">
+  <img src="9.jpg" class="historyimg">
+  <img src="10.jpg" class="historyimg">
+  <img src="12.jpg" class="historyimg">
+  <img src="13.jpg" class="historyimg">
+  <img src="14.jpg" class="historyimg">
+  <img src="15.jpg" class="historyimg">
+  <img src="16.jpg" class="historyimg">
+  <img src="17.jpg" class="historyimg">
+  <img src="18.jpg" class="historyimg">
+  <img src="19.jpg" class="historyimg">
+  <img src="20.jpg" class="historyimg">
+  <img src="21.jpg" class="historyimg">
+  <img src="22.jpg" class="historyimg">
+  <img src="23.jpg" class="historyimg">
+  <img src="24.jpg" class="historyimg">
+  <img src="25.jpg" class="historyimg">
+  <img src="26.jpg" class="historyimg">
 </div>
 
 </body>
