--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 </div>
  <div class="navigation">
-	<a href="" class="navscreen"><button class="homebutton">Documentary</button></a>
+	<a href="https://bernardsinoman.github.io/Thesis/" class="navscreen"><button class="navbutton">Documentary</button></a>
 	<a href=""><button class="navbutton">The Program</button></a>
-	<a href=""><button class="navbutton">History</button></a>
+	<a href="https://bernardsinoman.github.io/Thesis/history.html"><button class="navbutton">History</button></a>
 	<a href=""><button class="navbutton">Graphics</button></a>
 	<a href=""><button class="navbutton">Archive</button></a>
  </div>
