--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </div>
  <div class="navigation">
-	<a href="https://bernardsinoman.github.io/Thesis/" class="navscreen"><button class="navbutton">Documentary</button></a>
+	<a href="https://bernardsinoman.github.io/Thesis/"><button class="navbutton">Documentary</button></a>
 	<a href=""><button class="navbutton">The Program</button></a>
 	<a href="https://bernardsinoman.github.io/Thesis/history.html"><button class="navbutton">History</button></a>
 	<a href=""><button class="navbutton">Graphics</button></a>
