--- a/graphics.html
+++ b/graphics.html
@@ -20,5 +20,20 @@
  </div>
 <div class="contentdiv">
 </div>
-
+	<img src="a.jpg" class="graphicsimg">
+	<img src="b.jpg" class="graphicsimg">
+	<img src="c.jpg" class="graphicsimg">
+	<img src="d.jpg" class="graphicsimg">
+	<div class="ediv">
+	<img src="e1.jpg" class="e">
+	<img src="e2.jpg" class="e">
+	<img src="e3.jpg" class="e">
+	<img src="e4.jpg" class="e">
+	<img src="e5.jpg" class="e">
+	</div>
+	<img src="f.jpg" class="graphicsimg">
+	<img src="g.jpg" class="graphicsimg">
+	<img src="h.jpg" class="graphicsimg">
+	<img src="i.jpg" class="graphicsimg">
+	<img src="j.jpg" class="graphicsimg">
 </body>
