--- a/graphics.html
+++ b/graphics.html
@@ -13,13 +13,12 @@
 </div>
  <div class="navigation">
 	<a href="https://bernardsinoman.github.io/Thesis/" class="navscreen"><button class="navbutton">Documentary</button></a>
-	<a href=""><button class="navbutton">The Program</button></a>
+	<a href="https://bernardsinoman.github.io/Thesis/program.html"><button class="navbutton">The Program</button></a>
 	<a href="https://bernardsinoman.github.io/Thesis/history.html"><button class="navbutton">History</button></a>
-	<a href=""><button class="navbutton">Graphics</button></a>
-	<a href=""><button class="navbutton">Archive</button></a>
+	<a href="https://bernardsinoman.github.io/Thesis/graphics.html"><button class="navbutton">Graphics</button></a>
+	<a href="https://bernardsinoman.github.io/Thesis/archive.html"><button class="navbutton">Archive</button></a>
  </div>
 <div class="contentdiv">
-</div>
 	<img src="a.jpg" class="graphicsimg">
 	<img src="b.jpg" class="graphicsimg">
 	<img src="c.jpg" class="graphicsimg">
@@ -36,4 +35,5 @@
 	<img src="h.jpg" class="graphicsimg">
 	<img src="i.jpg" class="graphicsimg">
 	<img src="j.jpg" class="graphicsimg">
+</div>
 </body>
