--- a/graphics.html
+++ b/graphics.html
@@ -22,7 +22,7 @@
 	<img src="a.jpg" class="graphicsimg">
 	<img src="b.jpg" class="graphicsimg">
 	<img src="c.jpg" class="graphicsimg">
-	<img src="d.jpg" class="graphicsimg">
+	<img src="d.jpg" class="long">
 	<div class="ediv">
 	<img src="e1.jpg" class="e">
 	<img src="e2.jpg" class="e">
