--- a/program.html
+++ b/program.html
@@ -19,7 +19,7 @@
 	<a href="https://bernardsinoman.github.io/Thesis/archive.html"><button class="navbutton">Archive</button></a>
  </div>
 <div class="videoWrapper">
-	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/j4TercQmpGo" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/SmWrVp-6ETI" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 </body>
