--- a/archive.html
+++ b/archive.html
@@ -29,6 +29,7 @@
   <img src="w3.jpg" class="w">
   <img src="w4.jpg" class="w">
   </div>
+  <img src="v2.jpg" class="graphicsimg">
   <img src="v.jpg" class="graphicsimg">
   <img src="u.jpg" class="graphicsimg">
   <img src="t.jpg" class="graphicsimg">
