--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 	<a href="https://bernardsinoman.github.io/Thesis/archive.html"><button class="navbutton">Archive</button></a>
  </div>
 <div class="contentdiv">
-	<h3 class="title">Documentary</h>
-	<div class="trial"></div>
+	<h3 class="title">Documentary</h3>
 </div>
 <div class="videoWrapper">
 	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7rKpTuaMQig" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
