--- a/history.html
+++ b/history.html
@@ -19,6 +19,9 @@
 	<a href="https://bernardsinoman.github.io/Thesis/archive.html"><button class="navbutton">Archive</button></a>
  </div>
 <div class="contentdiv">
+  <div class="contentdiv">
+	<h3 class="title">History</h3>
+  </div>
   <img src="1.jpg" class="historyimg">
   <img src="2.jpg" class="historyimg">
   <img src="3.jpg" class="historyimg">
