--- a/graphics.html
+++ b/graphics.html
@@ -19,6 +19,9 @@
 	<a href="https://bernardsinoman.github.io/Thesis/archive.html"><button class="navbutton">Archive</button></a>
  </div>
 <div class="contentdiv">
+	<div class="contentdiv">
+		<h3 class="title">Graphics</h3>
+	</div>
 	<img src="a.jpg" class="graphicsimg">
 	<img src="b.jpg" class="graphicsimg">
 	<img src="c.jpg" class="graphicsimg">
