--- a/archive.html
+++ b/archive.html
@@ -19,7 +19,10 @@
 	<a href="https://bernardsinoman.github.io/Thesis/archive.html"><button class="navbutton">Archive</button></a>
  </div>
 <div class="contentdiv">
-	<img src="z.jpg" class="graphicsimg">
+  <div class="contentdiv">
+	<h3 class="title">Archive</h3>
+  </div>
+  <img src="z.jpg" class="graphicsimg">
   <img src="z1.jpg" class="graphicsimg">
   <img src="y.jpg" class="graphicsimg">
   <img src="x.jpg" class="long">
