--- a/program.html
+++ b/program.html
@@ -18,6 +18,9 @@
 	<a href="https://bernardsinoman.github.io/Thesis/graphics.html"><button class="navbutton">Graphics</button></a>
 	<a href="https://bernardsinoman.github.io/Thesis/archive.html"><button class="navbutton">Archive</button></a>
  </div>
+  <div class="contentdiv">
+	<h3 class="title">The Program</h3>
+  </div>
 <div class="videoWrapper">
 	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/SmWrVp-6ETI" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
