--- a/history.html
+++ b/history.html
@@ -20,7 +20,7 @@
  </div>
 <div class="contentdiv">
   <div class="contentdiv">
-	<h3 class="title">History</h3>
+	<h3 class="title">Program History</h3>
   </div>
   <img src="1.jpg" class="historyimg">
   <img src="2.jpg" class="historyimg">
