--- a/archive.html
+++ b/archive.html
@@ -33,6 +33,7 @@
   <img src="w4.jpg" class="w">
   </div>
   <img src="v2.jpg" class="graphicsimg">
+  <img src="v1.jpg" class="graphicsimg">
   <img src="v.jpg" class="graphicsimg">
   <img src="u.jpg" class="graphicsimg">
   <img src="t.jpg" class="graphicsimg">
