--- a/history.html
+++ b/history.html
@@ -47,6 +47,7 @@
   <img src="24.jpg" class="historyimg">
   <img src="25.jpg" class="historyimg">
   <img src="26.jpg" class="historyimg">
+  <img src="27.jpg" class="historyimg">
 </div>
 
 </body>
