--- a/graphics.html
+++ b/graphics.html
@@ -38,5 +38,6 @@
 	<img src="h.jpg" class="graphicsimg">
 	<img src="i.jpg" class="graphicsimg">
 	<img src="j.jpg" class="graphicsimg">
+	<img src="k.jpg" class="graphicsimg">
 </div>
 </body>
