--- a/history.html
+++ b/history.html
@@ -50,7 +50,7 @@
   <img src="24.jpg" class="historyimg">
   <img src="25.jpg" class="historyimg">
   <img src="26.jpg" class="historyimg">
-  <img src="27.jpg" class="historyimg">
+  <img src="27.png" class="historyimg">
 </div>
 
 </body>
